--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -831,6 +831,18 @@ h1, h2, h3, h4, h5, h6 {
   animation: shake 0.5s ease-in-out;
 }
 
+.infoMessage {
+  background: rgba($echo-blue, 0.15);
+  border: 1px solid rgba($echo-blue, 0.3);
+  border-radius: 6px;
+  padding: 0.75rem;
+  margin-bottom: 1rem;
+  color: $echo-blue;
+  font-size: 0.9rem;
+  text-align: center;
+  // No shake animation for info messages
+}
+
 .installPrompt {
   text-align: center;
   padding-top: 1rem;
